styles/css/app.css
/* ... */
.nav-menu-page-link a:hover:before {
  transform: translateX(100%);
  opacity: 0;
}
.nav-menu-page-link a:after {
  content: attr(data-text);
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  transform: translateX(-100%);
  transition: 0.5s;
  opacity: 0;
}
@supports (-webkit-text-stroke: 1px #8c8c8c) {
  .nav-menu-page-link a:after {
    -webkit-text-stroke: 1px #8c8c8c;
    -webkit-text-fill-color: transparent;
  }
}
.nav-menu-page-link a:hover:after {
  transform: translateX(0);
  opacity: 1;
}

.nav-menu-info-wrapper a {
  position: relative;
  color: #ffffff;
}
.nav-menu-info-wrapper a:before {
  content: attr(data-text);
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  transform: translateX(0);
  transition: 0.5s;
  color: #ffffff;
}
.nav-menu-info-wrapper a:hover:before {
  transform: translateX(100%);
  opacity: 0;
}
.nav-menu-info-wrapper a:after {
  content: attr(data-text);
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  transform: translateX(-100%);
  transition: 0.5s;
  opacity: 0;
  color: #ffffff;
}
.nav-menu-info-wrapper a:hover:after {
  transform: translateX(0);
  opacity: 1;
}

/* ==MONTSERRAT== */
* {
  margin: 0;
  padding: 0;
}

::selection {
  background-color: #777777;
  color: #ffffff;
}

html {
  scrollbar-width: none;
  -ms-overflow-style: none;
  overflow-y: scroll;
  overflow-x: hidden;
}

body {
  font-family: "Blinker", sans-serif;
  color: #ffffff;
  position: relative;
  background-color: #101010;
}

section {
  display: block;
}

ul {
  list-style: none;
}

a:active {
  outline: none;
}

h1, h2, h3, h4, h5, h6 {
  font-family: "Montserrat", sans-serif;
  font-weight: 800;
  line-height: 0.9;
  text-transform: uppercase;
}

nav {
  position: relative;
  z-index: 20;
  display: flex;
  margin: 0 2rem;
  height: 5rem;
}
@media (min-width: 768px) {
  nav {
    height: 17vh;
    margin: 0 3.5rem;
  }
}
@media (min-width: 1280px) {
  nav {
    height: 16vh;
  }
}

.nav-home-link-container {
  display: flex;
  align-items: center;
  flex-grow: 1;
  font-size: 1rem;
  font-family: "Montserrat", sans-serif;
  font-weight: 800;
  text-transform: uppercase;
}

.nav-btn-container {
  display: flex;
  align-items: center;
}

.nav-btn {
  transition: all 0.5s ease;
}
.nav-btn:hover {
  cursor: pointer;
  opacity: 0.45;
}
.nav-btn .strokes {
  width: 1.4em;
  height: 1.4em;
  list-style: none;
  padding: 0;
  transition: transform 1s cubic-bezier(0.23, 1, 0.32, 1), color 1s cubic-bezier(0.23, 1, 0.32, 1);
  transform: translateZ(0);
  color: #fff;
}
.nav-btn .strokes .stroke {
  width: 100%;
  height: 2px;
  background-color: #fff;
  position: absolute;
  top: 50%;
  margin-top: -0.75px;
  transform: translateY(-3.75px) translateZ(0);
  transition: transform 1s cubic-bezier(0.23, 1, 0.32, 1), background-color 1s cubic-bezier(0.23, 1, 0.32, 1);
}
.nav-btn .strokes .stroke:last-child {
  transform: translateY(3.75px) translateZ(0);
}

.nav-btn.toggled .strokes .stroke {
  transform: rotate(45deg) translateZ(0);
}
.nav-btn.toggled .strokes .stroke:last-child {
  transform: rotate(-45deg) translateZ(0);
}

.nav-menu {
  z-index: 0;
  position: absolute;
  height: 0;
  width: 100%;
  top: 0;
  left: 0;
  background-color: #101010;
  overflow: hidden;
  opacity: 0;
  transition: opacity 0.5s ease-in-out;
}

.nav-menu-container {
  position: relative;
  top: 25vh;
  display: flex;
  flex-direction: column;
}
@media (min-width: 1280px) {
  .nav-menu-container {
    flex-direction: row;
    margin: 0 10rem;
  }
}

.nav-menu-page-links {
  position: relative;
  display: flex;
  flex-direction: column;
  text-align: right;
  overflow: hidden;
  margin-bottom: 2.5rem;
}
@media (min-width: 1280px) {
  .nav-menu-page-links {
    order: 2;
    margin-bottom: 0;
    line-height: 1;
  }
}

.nav-menu-page-link {
  transition: 0.5s;
}
.nav-menu-page-link.slide-in-one {
  animation-name: slide-left;
  animation-duration: 0.6s;
}
.nav-menu-page-link.slide-in-two {
  animation-name: slide-left;
  animation-duration: 0.8s;
}

.nav-menu-page-link a {
  text-decoration: none;
  text-transform: uppercase;
  font-family: "Montserrat", sans-serif;
  font-size: calc(25px + 4vw);
  font-weight: 800;
}
.nav-menu-page-link a.--contact {
  text-decoration: line-through;
  text-decoration-color: #f65252;
  text-decoration-thickness: 0.5rem;
  color: #ffffff;
}
.nav-menu-page-link a.--contact:before {
  content: "";
}
.nav-menu-page-link a.--contact:after {
  content: "";
}
@media (min-width: 1280px) and (max-width: 1920px) {
  .nav-menu-page-link a.--contact {
    text-decoration-thickness: 1rem;
  }
}

.nav-menu-info {
  width: 100%;
}
@media (min-width: 1280px) {
  .nav-menu-info {
    display: flex;
    align-items: end;
    order: 1;
    flex: 1;
  }
}

.nav-menu-info-wrapper {
  font-family: "Blinker", sans-serif;
  display: inline-block;
  overflow: hidden;
}
.nav-menu-info-wrapper a {
  display: block;
  line-height: 1.5rem;
  text-decoration: none;
  outline: none;
  color: transparent;
}
@media (min-width: 1280px) {
  .nav-menu-info-wrapper a {
    line-height: 1.5;
    font-size: 22px;
    font-weight: 600;
  }
}
.nav-menu-info-wrapper a.slide-in-one {
  animation-name: slide-right;
  animation-duration: 0.6s;
}
.nav-menu-info-wrapper a.slide-in-two {
  animation-name: slide-right;
  animation-duration: 0.8s;
}

.nav-menu-footer {
  display: flex;
  position: absolute;
  bottom: 2.5rem;
  left: 0;
  right: 0;
  overflow: hidden;
}
@media (min-width: 768px) {
  .nav-menu-footer {
    bottom: 8.5vh;
    margin: 0 3.5rem;
  }
}
.nav-menu-footer .nav-menu-social-links {
  flex: 1;
}
.nav-menu-footer .nav-menu-social-links a {
  margin-right: 1rem;
}
.nav-menu-footer .nav-menu-social-links a svg {
  fill: #ffffff;
}
/* ... */

